--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -60,12 +60,27 @@ jobs:
           pip install buildozer==1.5.0 cython==0.29.33 kivy==2.2.1 >> buildozer-final.log 2>&1
           echo "===== 安装Python依赖结束 =====" >> buildozer-final.log
 
-      # 步骤5：安装SDK组件（固化版本），日志追加
-      - name: 5. 安装SDK组件（33.0.2）
+      # 步骤5：安装SDK组件（固化版本），增加重试逻辑
+      - name: 5. 安装SDK组件（33.0.2，增加重试）
         run: |
-          echo "===== 安装SDK组件开始 =====" >> buildozer-final.log
-          yes | sdkmanager --licenses >> buildozer-final.log 2>&1
-          sdkmanager "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653" >> buildozer-final.log 2>&1
+          echo "===== 安装SDK组件开始（重试3次） =====" >> buildozer-final.log
+          # 网络断连时重试3次，每次失败都写日志
+          for i in {1..3}; do
+            echo "第$i次尝试安装SDK组件" >> buildozer-final.log
+            yes | sdkmanager --licenses >> buildozer-final.log 2>&1
+            sdkmanager "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653" >> buildozer-final.log 2>&1
+            if [ $? -eq 0 ]; then
+              echo "SDK组件安装成功" >> buildozer-final.log
+              break
+            else
+              echo "第$i次安装失败，等待5秒重试" >> buildozer-final.log
+              sleep 5
+            fi
+          done
+          # 不管成功失败，都写结果到日志
+          if [ $i -eq 3 ]; then
+            echo "SDK组件3次安装均失败" >> buildozer-final.log
+          fi
           echo "===== 安装SDK组件结束 =====" >> buildozer-final.log
 
       # 步骤6：清理缓存+创建链接，日志追加
@@ -85,11 +100,10 @@ jobs:
           echo "构建错误码：$?" >> buildozer-final.log
           echo "===== 构建APK结束 =====" >> buildozer-final.log
 
-      # 步骤8：强制上传日志（绝对不能漏）
-      - name: 8. 强制上传日志（必传）
+      # 步骤8：强制上传日志（绝对不能漏，无论任何情况）
+      - name: 8. 强制上传日志（必传，无论任何情况）
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: build-log
           path: buildozer-final.log
-          # 哪怕文件空也上传，确保能拿到
-          if-no-files-found: warn
